# QMLHealthConnect

./: AxisInteractionZone.qml  CButton.qml  CMakeLists.txt  ChartControlButtons.qml  ChartInteractionZone.qml  ChartTooltip.qml  DateTimePicker.qml  Divider.qml  GenericTooltip.qml  HealthChartView.qml  InputPanel.qml  LoadingOverlay.qml  Main.qml  PeriodTimebar.qml  ThemeManager.qml  ThemeToggle.qml  TogglePanelButton.qml  backend.cpp  backend.h  main.cpp
android/: AndroidManifest.xml  build.gradle
android/res/values/: styles.xml
android/src/org/verya/QMLHealthConnect/: HealthBridge.kt  MainActivity.kt  NotificationHelper.kt  NotificationReceiver.kt  TestBridge.kt
